# moobo

./: .gitignore  README.md  com.github.brain-child.moobo.yml  meson.build
.github/workflows/: main.yml
data/: com.github.brain-child.moobo.appdata.xml.in  com.github.brain-child.moobo.desktop.in  com.github.brain-child.moobo.gresource.xml  com.github.brain_child.moobo.appdata.xml.in  com.github.brain_child.moobo.desktop.in  com.github.brain_child.moobo.gresource.xml  com.github.brain_child.moobo.gschema.xml  gschema.xml  meson.build  moobo.appdata.xml.in
data/styles/: SourceRow.css  Style.css
po/: LINGUAS  POTFILES  com.github.brain-child.moobo.pot  com.github.brain_child.moobo.pot  com.github.petheration.moobo.pot  de.po  fr.po  meson.build  pt.po
po/extra/: POTFILES  de.po  extra.pot  fr.po  pt.po
src/: Application.vala  Movable.vala  Window.vala  meson.build
src/Controllers/: BoardController.vala  FloatingButtonController.vala  ImageController.vala  LabelController.vala  RowController.vala  TextController.vala
src/Helper/: Colors.vala  Constants.vala  DemoBoard.vala  Deserializer.vala  Serializer.vala
src/Models/: BaseModel.vala  BoardModel.vala  ImageModel.vala  LabelModel.vala  TextModel.vala
src/Widgets/: Board.vala  ColorButton.vala  FloatingButton.vala  ImageWidget.vala  LabelWidget.vala  MenuItemColor.vala  Row.vala  TextWidget.vala
