sources = files(
    'Application.vala',
    'Window.vala',
    'Movable.vala',

    'Controllers/BoardController.vala',
    'Controllers/RowController.vala',
    'Controllers/TextController.vala',
    'Controllers/LabelController.vala',
    'Controllers/ImageController.vala',
    'Controllers/FloatingButtonController.vala',

    'Helper/Colors.vala',
    'Helper/Constants.vala',
    'Helper/Serializer.vala',
    'Helper/Deserializer.vala',
    'Helper/DemoBoard.vala',

    'Models/BoardModel.vala',
    'Models/BaseModel.vala',
    'Models/TextModel.vala',
    'Models/LabelModel.vala',
    'Models/ImageModel.vala',

    'Widgets/Board.vala',
    'Widgets/Row.vala',
    'Widgets/MenuItemColor.vala',
    'Widgets/ColorButton.vala',
    'Widgets/FloatingButton.vala',
    'Widgets/TextWidget.vala',
    'Widgets/LabelWidget.vala',
    'Widgets/ImageWidget.vala'
)
